--- a/talks/talks/quals/how_pt1-tidalsim_v1.jinja2
+++ b/talks/talks/quals/how_pt1-tidalsim_v1.jinja2
@@ -85,7 +85,7 @@
     <li class="fragment">Huffman compression from Embench (huffbench)</li>
     <li class="fragment"><code>N=10000</code>, <code>C=18</code></li>
     <li class="fragment">Full RTL sim takes 15 minutes, TidalSim runs in 10 seconds</li>
-    <li class="fragment">Larger IPC variance</li>
+    <li class="fragment">Large IPC variance</li>
   </ul>
   <img class="fragment" src="./figs/multi-level-sim/huffbench_results.svg" />
 </section>
