--- a/talks/talks/quals/how_pt2-tidalsim_v2.jinja2
+++ b/talks/talks/quals/how_pt2-tidalsim_v2.jinja2
@@ -228,6 +228,12 @@ val memTxGen: Gen[MemTx] = Gen[MemTx].uniform
       </div>
     </div>
   </section>
+
+  <section class="center">
+    <div class="center">
+      <img src="./figs/dynamic/tidalsim/validation_flow.svg" />
+    </div>
+  </section>
 </section>
 
 <section>
