--- a/talks/talks/quals/what.jinja2
+++ b/talks/talks/quals/what.jinja2
@@ -50,37 +50,37 @@
     <div class="fragment fade-in-then-out" style="display: grid; place-items: center; width: 80%;">
       <h3 class="center">Industry</h3>
       <img src="./figs/dynamic/tidalsim/industry_flow2.svg" height="100%" />
-      <figcaption class="center">RTL performance validation is too costly.</figcaption>
+      <figcaption style="margin-top: 1rem;" class="center">RTL performance validation is too costly.</figcaption>
     </div>
 
     <div class="fragment fade-in-then-out" style="display: grid; place-items: center; width: 80%;">
       <h3 class="center">Industry</h3>
       <img src="./figs/dynamic/tidalsim/industry_flow_new.svg" height="100%" />
-      <figcaption class="center">Rapid RTL performance validation becomes viable.</figcaption>
+      <figcaption style="margin-top: 1rem;" class="center">Rapid RTL performance validation becomes viable.</figcaption>
     </div>
 
     <div class="fragment fade-in-then-out" style="display: grid; place-items: center; width: 80%;">
       <h3 class="center">Academia</h3>
       <img src="./figs/dynamic/tidalsim/academic_flow.svg" height="100%" />
-      <figcaption class="center">Academics resort to inaccurate uArch simulators.</figcaption>
+      <figcaption style="margin-top: 1rem;" class="center">Academics resort to inaccurate uArch simulators.</figcaption>
     </div>
 
     <div class="fragment fade-in-then-out" style="display: grid; place-items: center; width: 80%;">
       <h3 class="center">Academia</h3>
       <img src="./figs/dynamic/tidalsim/academic_flow_new.svg" height="100%" />
-      <figcaption>RTL-first evaluation strategy becomes viable.</figcaption>
+      <figcaption style="margin-top: 1rem;">RTL-first evaluation strategy becomes viable.</figcaption>
     </div>
 
     <div class="fragment fade-in-then-out" style="display: grid; place-items: center; width: 80%;">
       <h3 class="center">Startup / Lean Team</h3>
       <img src="./figs/dynamic/tidalsim/startup_flow2.svg" height="100%" />
-      <figcaption>No rapid performance evaluation strategy for RTL.</figcaption>
+      <figcaption style="margin-top: 1rem;">No rapid performance evaluation strategy for RTL.</figcaption>
     </div>
 
     <div class="fragment fade-in" style="display: grid; place-items: center; width: 80%;">
       <h3 class="center">Startup / Lean Team</h3>
       <img src="./figs/dynamic/tidalsim/startup_flow_new.svg" height="100%" />
-      <figcaption>RTL-first design strategy becomes viable.</figcaption>
+      <figcaption style="margin-top: 1rem;">RTL-first design strategy becomes viable.</figcaption>
     </div>
   </div>
 
@@ -103,7 +103,7 @@
     <li class="fragment">Implementation of TidalSim</li>
     <li class="fragment">Evaluation of TidalSim for performance estimation on realistic and large workloads
       <ul style="font-size: 1.4rem;">
-        <li>Embench, GAP, SPEC, HyperProtoBench, MLPerf, CloudSuite</li>
+        <li>Embench, SPEC, HyperProtoBench, HyperCompressBench</li>
       </ul>
     </li>
     <li class="fragment">Case studies for hardware DSE and coverpoint synthesis</li>
