qual talk final

--- a/talks/talks/2024_01-quals-tidalsim.jinja2
+++ b/talks/talks/2024_01-quals-tidalsim.jinja2
@@ -57,7 +57,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
     <li class="fragment"><strong>What</strong>: What is the thing I want to build?</li>
     <li class="fragment"><strong>Prior work</strong> + <strong>what's new</strong> about my proposal?</li>
     <li class="fragment"><strong>How (pt 1)</strong>: A prototype implementation of my proposal</li>
-    <hr>
+    <hr class="fragment">
     <li class="fragment"><strong>Case studies</strong> / <strong>applications</strong>: Using TidalSim for performance optimization and verification</li>
     <!--How will we use what we built to do something that was impossible before?</li>-->
     <li class="fragment"><strong>How (pt 2)</strong>: New contributions to sampled simulation methodology</li>
