--- a/talks/talks/quals/how_pt1-tidalsim_v1.jinja2
+++ b/talks/talks/quals/how_pt1-tidalsim_v1.jinja2
@@ -153,7 +153,8 @@ core   0: 0x000000008000130c (0x00000505) c.addi  a0, 1
 ---
   </code></pre>
   <p class="center fragment">The trace is grouped into intervals of $ N $ instructions of which we will choose $ C $ intervals as simulation units</p>
-  <p class="center fragment">Typical $C = 10000$</p>
+  <p class="center fragment">Typical $C = 10-100$</p>
+  <p class="center fragment">Typical $N = 10000$</p>
 </section>
 
 <section>
