--- a/talks/talks/2024_01-athlete-tidalsim.jinja2
+++ b/talks/talks/2024_01-athlete-tidalsim.jinja2
@@ -590,9 +590,14 @@ import 'reveal.js/plugin/highlight/monokai.css'
         <li>dhrystone, coremark, riscv-tests benchmarks, MiBench</li>
       </ul>
     </li>
-    <li class="fragment">Explore more sophisticated clustering and extrapolation techniques</li>
-    <li class="fragment">Demonstrate we can hit <strong>&lt;1% IPC error</strong></li>
+    <li class="fragment">Explore more sophisticated clustering and extrapolation techniques
+      <ul>
+        <li>Binary and PC-agnostic interval embeddings</li>
+      </ul>
+    </li>
   </ul>
+
+  <p class="center fragment">Demonstrate we can hit <strong>&lt;1% IPC error</strong></p>
 </section>
 
 <section>
