--- a/talks/talks/2024_01-athlete-tidalsim.jinja2
+++ b/talks/talks/2024_01-athlete-tidalsim.jinja2
@@ -269,12 +269,20 @@ import 'reveal.js/plugin/highlight/monokai.css'
       <td class="bg-green">Minimal</td>
     </tr>
     <tr class="fragment">
-      <td>μArch Simulators</td>
+      <td>General-purpose μArch Simulators</td>
       <td>gem5, Sniper, ZSim, SST</td>
       <td class="bg-orange">100 KIPS (gem5) - 100 MIPS (Sniper)</td>
       <td class="bg-green">&lt;1 minute</td>
       <td class="bg-orange">10-50% IPC error</td>
       <td class="bg-green">Minimal</td>
+    </tr>
+    <tr class="fragment">
+      <td>Bespoke μArch Simulators</td>
+      <td>Industry performance models</td>
+      <td class="bg-orange">≈ 0.1-1 MIPS</td>
+      <td class="bg-green">&lt;1 minute</td>
+      <td class="bg-green">Close</td>
+      <td class="bg-red">$1M+</td>
     </tr>
     <tr class="fragment">
       <td>RTL Simulators</td>
