--- a/talks/talks/2024_01-athlete-tidalsim.jinja2
+++ b/talks/talks/2024_01-athlete-tidalsim.jinja2
@@ -261,8 +261,16 @@ import 'reveal.js/plugin/highlight/monokai.css'
     </tr></thead>
     <tbody>
     <tr class="fragment">
+      <td>JIT-based Simulators / VMs</td>
+      <td>qemu, KVM, VMWare Fusion</td>
+      <td class="bg-green">1-3 GIPS</td>
+      <td class="bg-green">&lt;1 second</td>
+      <td class="bg-red">None</td>
+      <td class="bg-green">Minimal</td>
+    </tr>
+    <tr class="fragment">
       <td>Architectural Simulators</td>
-      <td>spike, qemu</td>
+      <td>spike, dromajo</td>
       <td class="bg-green">10-100+ MIPS</td>
       <td class="bg-green">&lt;1 second</td>
       <td class="bg-red">None</td>
@@ -319,7 +327,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
     </tbody>
   </table>
 
-  <p class="center fragment">TidalSim combines the strengths of each technique to produce a meta-simulator that achieves high throughput, low latency, high accuracy, and low cost.</p>
+  <p class="center fragment smallish">TidalSim combines the strengths of each technique to produce a meta-simulator that achieves high throughput, low latency, high accuracy, and low cost.</p>
 </section>
 
 <section>
